# dart_media_toolkit

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: build-example.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/dart_media_toolkit_example/: MainActivity.kt
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc  main.cpp
lib/: dart_media_toolkit.dart  dart_media_toolkit_bindings_generated.dart
linux/: CMakeLists.txt
src/: CMakeLists.txt  VcpkgAndroid.cmake  dart_media_toolkit.c  dart_media_toolkit.h
windows/: CMakeLists.txt
